--- a/inventory.ini
+++ b/inventory.ini
@@ -1,2 +1,11 @@
 [frontend]
-3.81.51.50
+172.31.36.116
+172.31.34.35
+
+[backend]
+172.31.36.116
+172.31.34.35
+
+[databse]
+172.31.36.116
+172.31.34.35
