--- a/inventory.ini
+++ b/inventory.ini
@@ -1,6 +1,6 @@
 [frontend]
-172.31.36.116
-172.31.34.35
+172.31.36.116 COURSE=Ansible DURATION=10HR TRAINER=Sivakumar ansible_user=ec2-user ansible_password=DevOps321
+172.31.34.35 COURSE=variables DURATION=1.5HR TRAINER=Sivakumar ansible_user=ec2-user ansible_password=DevOps321
 
 [backend]
 172.31.36.116
