--- a/12.vars-preference.yaml
+++ b/12.vars-preference.yaml
@@ -1,8 +1,8 @@
 - name: understand vars preference
   hosts: local
   connection: local
-  vars:
-    GREETING: "Hello from PLAY"
+  # vars:
+  #   GREETING: "Hello from PLAY"
   # vars_files:
   # - course.yaml
   # vars_prompt:
@@ -18,3 +18,7 @@
 
   # 1. command line or args
   # 2. Task
+  # 3. File
+  # 4. prompt
+  # 5. Play
+  # 6. inventory
