--- a/17-loops.yaml
+++ b/17-loops.yaml
@@ -6,7 +6,7 @@
     ansible.builtin.debug:
       msg: "Hello, {{ item }}" #item here is reserved keyword
     loop:
-    - Suresh
-    - Ramesh
-    - Joseph
-    - Raheem
+    - Kranthi
+    - Shanthi
+    - Srihari
+    - Bhavani
